--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ google_analytics: # set tracking, remove from /javascripts/basic.js if unwanted.
 
 links: []
 pygments:         true
-permalink:        pretty
+permalink:        /:title/
 markdown:         rdiscount
 rdiscount:
   extensions:     [smart]
